# DP-KW_final

./: README.md  Test_ACV_23_Part2.ipynb  env_comp_vision
Data_csv/: fitness_poses_csvs_out.csv
Data_csv/fitness_poses_csvs_out/: jumping_jacks_down.csv  jumping_jacks_up.csv  pullups_down.csv  pullups_up.csv  pushups_down.csv  pushups_up.csv  situp_down.csv  situp_up.csv  squats_down.csv  squats_up.csv
live-coach/: pyproject.toml
live-coach/live_coach/: live_coach.py  utils.py
