[tool.poetry]
name = "live-coach"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "live_coach"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
requests = "^2.28.2"
mediapipe = "^0.9.2.1"
opencv-python = "^4.7.0.72"
tqdm = "^4.65.0"
pillow = "^9.4.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
